[metadata]
name = colorful-festival-gy
version = 0.1.2
author = Guyutongxue
author_email = guyutongxue@163.com
description = An OSS course practice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OSSDevelopment-Course-2021-Autumn/colorful-festival-gy
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src
